[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Cannon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level5.gd" type="Script" id=4]
[ext_resource path="res://fonts/fixedsys.tres" type="DynamicFont" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]

[sub_resource type="ParticlesMaterial" id=1]
resource_local_to_scene = true
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 4.123, 5.625, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 0.01
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.45
scale_random = 0.41
color = Color( 1, 0.372549, 0.25098, 1 )

[node name="Level5" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -184, -328 )

[node name="DeathParticles" parent="Player" index="5"]
process_material = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.08
drag_margin_top = 0.08
drag_margin_right = 0.08
drag_margin_bottom = 0.08

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -2490375, 3, 0, -2490374, 0, 0, -2490373, 0, 0, -2490372, 0, 0, -2490371, 0, 0, -2490370, 0, 0, -2490369, 0, 0, -2555904, 0, 0, -2555903, 0, 0, -2555902, 0, 0, -2555901, 0, 0, -2555900, 0, 0, -2555899, 4, 0, -2555892, 6, 0, -2555891, 4, 0, -2424839, 0, 0, -2424838, 5, 0, -2424837, 9, 0, -2424836, 9, 0, -2424835, 9, 0, -2424834, 9, 0, -2424833, 9, 0, -2490368, 9, 0, -2490367, 9, 0, -2490366, 9, 0, -2490365, 9, 0, -2490364, 6, 0, -2490363, 0, 0, -2490355, 6, 0, -2359303, 0, 0, -2359302, 8, 0, -2424828, 10, 0, -2424827, 0, 0, -2424826, 0, 0, -2424825, 0, 0, -2424824, 8, 0, -2293767, 0, 0, -2293766, 8, 0, -2359292, 10, 0, -2359291, 0, 0, -2359290, 5, 0, -2359289, 9, 0, -2228231, 0, 0, -2228230, 8, 0, -2293756, 10, 0, -2293755, 0, 0, -2293754, 8, 0, -2162695, 0, 0, -2162694, 8, 0, -2162689, 7, 0, -2228220, 10, 0, -2228219, 0, 0, -2228218, 8, 0, -2228213, 7, 0, -2097159, 0, 0, -2097158, 8, 0, -2097154, 10, 0, -2097153, 0, 0, -2162688, 8, 0, -2162683, 9, 0, -2162678, 10, 0, -2162677, 0, 0, -2162676, 8, 0, -2031623, 0, 0, -2031622, 8, 0, -2031618, 10, 0, -2031617, 0, 0, -2097152, 8, 0, -2097142, 10, 0, -2097141, 0, 0, -2097140, 8, 0, -1966087, 0, 0, -1966086, 8, 0, -1966082, 10, 0, -1966081, 0, 0, -2031616, 8, 0, -2031606, 10, 0, -2031605, 0, 0, -2031604, 8, 0, -1900551, 0, 0, -1900550, 8, 0, -1900546, 10, 0, -1900545, 0, 0, -1966080, 8, 0, -1966070, 10, 0, -1966069, 0, 0, -1966068, 8, 0, -1835015, 0, 0, -1835014, 8, 0, -1835010, 10, 0, -1835009, 0, 0, -1900544, 4, 0, -1900543, 7, 0, -1900542, 7, 0, -1900541, 7, 0, -1900540, 7, 0, -1900539, 7, 0, -1900538, 7, 0, -1900537, 7, 0, -1900536, 7, 0, -1900535, 7, 0, -1900534, 3, 0, -1900533, 0, 0, -1769486, 3, 0, -1769485, 0, 0, -1769484, 0, 0, -1769483, 0, 0, -1769482, 0, 0, -1769481, 0, 0, -1769480, 0, 0, -1769479, 5, 0, -1769473, 6, 0, -1835008, 0, 0, -1835007, 0, 0, -1835006, 0, 0, -1835005, 0, 0, -1835004, 0, 0, -1835003, 0, 0, -1835002, 0, 0, -1835001, 0, 0, -1835000, 0, 0, -1834999, 0, 0, -1834998, 0, 0, -1834997, 5, 0, -1703950, 0, 0, -1769445, 7, 0, -1638414, 0, 0, -1703909, 0, 0, -1572878, 0, 0, -1507342, 0, 0, -1572843, 0, 0, -1572842, 0, 0, -1572841, 0, 0, -1441806, 0, 0, -1376270, 0, 0, -1441758, 12, 0, -1310734, 0, 0, -1376243, 0, 0, -1376242, 0, 0, -1376241, 0, 0, -1376240, 0, 0, -1376239, 0, 0, -1376227, 0, 0, -1376226, 0, 0, -1376225, 0, 0, -1376224, 0, 0, -1376223, 0, 0, -1376222, 0, 0, -1376221, 0, 0, -1245198, 0, 0, -1245197, 0, 0, -1245196, 0, 0, -1245195, 0, 0, -1179662, 0, 0, -1114126, 0, 0, -1114125, 14, 0, -1114124, 14, 0, -1114123, 14, 0, -1114122, 14, 0, -1114121, 14, 0, -1114120, 14, 0, -1114119, 14, 0, -1114118, 14, 0, -1114117, 14, 0, -1114116, 14, 0, -1114115, 14, 0, -1114114, 14, 0, -1114113, 14, 0, -1179648, 14, 0, -1179647, 14, 0, -1179646, 14, 0, -1179645, 14, 0, -1179644, 14, 0, -1179643, 14, 0, -1179642, 14, 0, -1179641, 14, 0, -1179640, 14, 0, -1179639, 14, 0, -1179638, 14, 0, -1179637, 14, 0, -1179636, 14, 0, -1179635, 14, 0, -1179634, 14, 0, -1179633, 14, 0, -1179632, 14, 0, -1179631, 14, 0, -1179630, 14, 0, -1179629, 14, 0, -1179628, 14, 0, -1179627, 14, 0, -1179626, 14, 0, -1179625, 14, 0, -1179624, 14, 0, -1179623, 14, 0, -1179622, 14, 0, -1179621, 14, 0, -1179620, 14, 0, -1179619, 14, 0, -1179618, 14, 0, -1179617, 14, 0, -1179616, 14, 0, -1179615, 14, 0, -1179614, 14, 0, -1179613, 14, 0, -1179612, 14, 0, -1179611, 14, 0, -1179610, 14, 0, -1179609, 14, 0, -1179608, 14, 0, -1179607, 14, 0, -1179606, 14, 0, -1179605, 14, 0, -1179604, 14, 0, -1179603, 14, 0, -1179602, 14, 0, -1179601, 14, 0, -1179600, 14, 0, -1179599, 14, 0, -1179598, 0, 0, -1048590, 0, 0, -1048589, 0, 0, -1048588, 0, 0, -1048587, 0, 0, -1048586, 0, 0, -1048585, 0, 0, -1048584, 0, 0, -1048583, 0, 0, -1048582, 0, 0, -1048581, 0, 0, -1048580, 0, 0, -1048579, 0, 0, -1048578, 0, 0, -1048577, 0, 0, -1114112, 0, 0, -1114111, 0, 0, -1114110, 0, 0, -1114109, 0, 0, -1114108, 0, 0, -1114107, 0, 0, -1114106, 0, 0, -1114105, 0, 0, -1114104, 0, 0, -1114103, 0, 0, -1114102, 0, 0, -1114101, 0, 0, -1114100, 0, 0, -1114099, 0, 0, -1114098, 0, 0, -1114097, 0, 0, -1114096, 0, 0, -1114095, 0, 0, -1114094, 0, 0, -1114093, 0, 0, -1114092, 0, 0, -1114091, 0, 0, -1114090, 0, 0, -1114089, 0, 0, -1114088, 0, 0, -1114087, 0, 0, -1114086, 0, 0, -1114085, 0, 0, -1114084, 0, 0, -1114083, 0, 0, -1114082, 0, 0, -1114081, 0, 0, -1114080, 0, 0, -1114079, 0, 0, -1114078, 0, 0, -1114077, 0, 0, -1114076, 0, 0, -1114075, 0, 0, -1114074, 0, 0, -1114073, 0, 0, -1114072, 0, 0, -1114071, 0, 0, -1114070, 0, 0, -1114069, 0, 0, -1114068, 0, 0, -1114067, 0, 0, -1114066, 0, 0, -1114065, 0, 0, -1114064, 0, 0, -1114063, 0, 0, -1114062, 0, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Polygon2D" type="Polygon2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -322.084, -355.084 )
scale = Vector2( 1.54622, 0.958148 )
color = Color( 0.141176, 0.631373, 0.611765, 1 )
polygon = PoolVector2Array( -126.984, -454.495, -128, -40, -128, 312, 824, 312, 824, -456 )
__meta__ = {
"_edit_group_": true
}

[node name="orange1" type="Polygon2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -187.9, -286 )
scale = Vector2( 3.03628, 0.25 )
color = Color( 1, 0.780392, 0.780392, 1 )
polygon = PoolVector2Array( -8, 24, -8, 56, -8, 88, 328, 88, 328, 48, 328, 24, 280, 24 )

[node name="Cannon" parent="." instance=ExtResource( 2 )]
position = Vector2( -56, -328 )

[node name="Cannon2" parent="." instance=ExtResource( 2 )]
position = Vector2( -56, -504 )

[node name="Cannon3" parent="." instance=ExtResource( 2 )]
position = Vector2( -8, -568 )

[node name="Cannon4" parent="." instance=ExtResource( 2 )]
position = Vector2( 88, -488 )

[node name="Cannon5" parent="." instance=ExtResource( 2 )]
position = Vector2( 136, -536 )

[node name="Controls" type="RichTextLabel" parent="."]
margin_left = 544.0
margin_top = 136.0
margin_right = 680.0
margin_bottom = 240.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "WASD TO MOVE
SPACE TO JUMP
CANNON GO FAST
SPACE TO LAUNCH
LAVA, SPIKES BAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="RichTextLabel" parent="."]
margin_left = 560.0
margin_top = 96.0
margin_right = 688.0
margin_bottom = 120.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "DOOR IS GOAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 6 )]
[connection signal="door_touch" from="Player" to="." method="_on_Player_door_touch"]
[connection signal="player_death" from="Player" to="HUD" method="_on_Player_player_death"]
[connection signal="area_entered" from="Player/CannonCollisonDetector" to="." method="_on_CannonCollisonDetector_area_entered"]

[editable path="Player"]
